--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gamekick</title>
+<title>GameKick Jailbreak</title>
 </head>
 <body>
 
-<h1>Fuck Indi</h1>
-<p>Indi is a cuck lol</p>
+<h1>GameKick Jailbreak Rules</h1>
+<h2 class="generalrules">General Rules</h2>
+  <p>[G1] If there is an issue regarding a rule, highest admin's discretion is enforced</p>
+  <p>[G2] Please attempt to solve any disputes between two parties politely before contacting admins</p>
+  <p>[G3] If you are unsure on any rules it is highly recommended to join T and get a feel for the game before joining CT</p>
+  <p>[G4] No harassment</p>
+  <p>[G5] No mic, text, or radio spam</p>
+  <p>[G6] No talking over the Warden</p>
+  <p>[G7] No ghosting</p>
+  <p>[G8] No hacking or scripting (including hyperscroll)</p>
+  <p>[G9] No excessive gunspamming</p>
+  <p>[G10] No freedays except for the first round on a map</p>
+  <p>[G11] No false orders</p>
+  <p>[G12] Ts must have an active LR by 0:00 or CTs will be slayed</p>
+  <p>[G13] When warden dies, last orders stand for 20 seconds</p>
+  <p>[G14] Pardons are at the warden's discretion</p>
+  <p>[G15] Opinionated games are refusable</p>
+  <p>[G16] First reaction/last reaction games are refusable</p>
+  <p>[G17] If a location is specified in a non exact way it is assumed to be the closest one or most obvious. For example “Get to the pit” would have the intent of sending you to the closest pit, not the pit in armory</p>
+<h2 class="ctrules">Counter-Terrorist Rules</h2>
+  <p>[CT1] If a player has a mic on CT, he or she takes priority over a non-mic player as warden</p>
+  <p>[CT2] CTs may be swapped to T by admin if gameplay is lacking</p>
+  <p>[CT3] “AFK Frozen” order, no movement of any type or use of flashlight, can only be given once per round and can only last for 30 seconds maximum</p>
+  <p>[CT4] No favoritism</p>
+  <p>[CT5] No teamkilling</p>
+  <p>[CT6] Cells must be open by 6:00, or CTs will be slayed</p>
+  <p>[CT7] Cells must remain open once opened at the beginning of the round</p>
+  <p>[CT8] CTs should not be near Ts without good reason</p>
+  <p>[CT9] CTs pursuing rebelling Ts must use same secret as rebelling T. The CT must see the T using the secret</p>
+  <p>[CT10] CTs cannot break secrets, unless they visibly see a T inside secret</p>
+  <p>[CT11] CTs cannot pick up or move secret weapons in their original position</p>
+  <p>[CT12] CTs must leave armory by 6:30</p>
+  <p>[CT13] CTs cannot camp in or around secrets and armory</p>
+  <p>[CT14] CTs cannot freekill or freeshoot Ts</p>
+  <p>[CT15] CTs cannot gunplant Ts except the warden if it is used for a game</p>
+  <p>[CT16] CTs cannot give wordplay orders</p>
+  <p>[CT17] CTs cannot give crouchwalk orders</p>
+  <p>[CT18] CTs cannot give in-cell orders</p>
+  <p>[CT19] CTs cannot kill Ts for picking up weapons</p>
+  <p>[CT20] Non-warden CTs may order Ts by name to drop weapons and/or not pass them, unless warden specifies otherwise</p>
+  <p>[CT21] Non-warden CT's must give a verbal warning by name to CTs not following warden’s orders</p>
+  <p>[CT22] Warden must give T's a repeat if asked</p>
+  <p>[CT23] Warden can allow another CT to open cells, but it is warden's responsibility to have cells open by 6:00</p>
+  <p>[CT24] Wardays expand at 4:30 and force expand at 2:30 unless otherwise noted by the warden, CTs are allowed to use secrets to expand</p>
+  <p>[CT25] Wardays must allow at least one minute between cells opening and expanding</p>
+  <p>[CT26] There must be at least one normal day in between wardays</p>
+  <p>[CT27] Skill based games must be demonstrated by warden first</p>
+  <p>[CT28] Simon may only be referred to as Simon</p>
+  <p>[CT29] 'Fish In A Barrel' is not allowed. CTs must open door completely before firing upon Ts</p>
+<h2 class="trules">Terrorist Rules</h2>
+  <p>[T1] 'No detours or delays' is implied with every order</p>
+  <p>[T2] Last 2 non-rebelling T's alive can initiate !lr, but will be slayed if rebelling</p>
+  <p>[T3] Ts cannot !lr on wardays</p>
+  <p>[T4] If a T is following a CT into warday they can be killed</p>
+  <p>[T5] Ts must ask for repeats in a reasonable amount of time</p>
+  <p>[T6] Ts may damage or kill CTs if they are baiting. Baiting is considered being within knifing distance of a T that is following orders</p>
+  <p>[T7] Ts cannot camp secrets past 2:30, which includes armory, but can use a secret to move to a new destination</p>
+  <p>[T8] Pointing primary and secondary guns at CTs is KOS</p>
+  <p>[T9] Any thrown grenade is considered KOS</p>
+  <p>[T10] Knifing vents or using secrets is KOS</p>
 </body>
 </html>
