--- a/jbrules.html
+++ b/jbrules.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GameKick Jailbreak</title>
+  <title>GameKick Jailbreak</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
