--- a/jbrules.html
+++ b/jbrules.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>GameKick Jailbreak Rules</h1>
-<h2 class="generalrules">General Rules</h2>
+<h2>General Rules</h2>
   <p>[G1] If there is an issue regarding a rule, highest admin's discretion is enforced</p>
   <p>[G2] Please attempt to solve any disputes between two parties politely before contacting admins</p>
   <p>[G3] If you are unsure on any rules it is highly recommended to join T and get a feel for the game before joining CT</p>
