--- a/jbrules.html
+++ b/jbrules.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <p> Join our Discord here - <a href="https://discord.gg/Ef62Fbx">https://discord.gg/Ef62Fbx</a></p>
+  <p> Join our Discord here - <a href="https://discord.gg/Sub3WJE">https://discord.gg/Sub3WJE</a></p>
 <h1>GameKick Jailbreak Rules</h1>
 <h2>General Rules</h2>
   <p>[G1] If there is an issue regarding a rule, highest admin's discretion is enforced</p>
