--- a/generalrules.html
+++ b/generalrules.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>General Rules</title>
+  <title>GameKick Jailbreak</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p>General Rules Test</p>
+
+  <p> Join our Discord here - <a href="https://discord.gg/Sub3WJE">https://discord.gg/Sub3WJE</a></p>
+<h1>GameKick General Rules</h1>
+<h2>General Rules</h2>
+  <p>[G1] If there is an issue regarding a rule, highest admin's discretion is enforced</p>
+  <p>[G2] Please attempt to solve any disputes between two parties politely before contacting admins</p>
+  <p>[G3] Use the appropriate channels in discord for their intended purposes especially regarding NSFW material</p>
+  <p>[G4] If a Discord channel has any specific rules follow them as posted
+  <p>[G4] No harassment</p>
+  <p>[G5] No spamming of any communication channels such as Discord, Steam messages, or game chats</p>
 </body>
 </html>
