--- a/jbrules.html
+++ b/jbrules.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>GameKick Jailbreak</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="styles.css"/>
+  <link rel="icon" type="image/png" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 </head>
 <body>
 
