--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>indi is <b>STILL</b> a cuck</h1>
   <p>also allegedly a groomer</p>
-  <p>nice job missmanaging your server to the point where anyone worth a damn has ditched. dumbass</p>
+  <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbass</p>
 
 </body>
 </html>
