--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>indi is <b>STILL</b> a cuck</h1>
-  <p>also allegedly a groomer</p>
+  <p>also a groomer, and keaton still won't call you daddy</p>
   <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbass</p>
 
 </body>
