--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <h1>indi is <b>STILL</b> a cuck</h1>
-  <p>also a groomer, and keaton still won't call him daddy</p>
-  <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbass</p>
-
+  <p>also a groomer</p>
+  <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbfuck</p>
+  <img src="smughat.gif" alt="mfw when keaton still wont call him daddy">
 </body>
 </html>
