--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <h1>indi is <b>STILL</b> a cuck</h1>
   <p>also a groomer</p>
   <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbfuck</p>
-  <img src="smughat.gif" alt="mfw when keaton still wont call him daddy">
+ <div class="content_img">
+  <img src='smughat.gif' width='100%' height='100%'>
+ <div>mfw when keaton still won't call him daddy</div>
+</div>
 </body>
 </html>
