--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <h1>indi is <b>STILL</b> a cuck</h1>
   <p>also a groomer</p>
   <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbfuck</p>
- <div class="content_img">
-  <img src='smughat.gif' width='100%' height='100%'>
- <div>mfw when keaton still won't call him daddy</div>
+  <img src="smughat.gif">
+  <p>mfw when keaton still won't call him daddy</p>
 </div>
 </body>
 </html>
