--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>indi is <b>STILL</b> a cuck</h1>
   <p>also a groomer</p>
-  <p>nice job mismanaging your server to the point where anyone worth a damn has ditched. dumbfuck</p>
+  <p>nice job mismanaging your server to the point where anyone with a brain has ditched you. dumbfuck</p>
   <img src="smughat.gif">
   <p>mfw when keaton still won't call him daddy</p>
 </div>
