--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>GameKick</title>
 </head>
 <body>
-
+<audio controls>
+  <source src="dancin.mp3" type="audio/mpeg">
+</audio>
 <h1>indi is <b>STILL</b> a cuck</h1>
   <p>also a groomer</p>
   <p>nice job mismanaging your server to the point where anyone with a brain has ditched you. dumbfuck</p>
