--- a/generalrules.html
+++ b/generalrules.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GameKick Jailbreak</title>
+  <title>NewAge Jailbreak</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <p> Join our Discord here - <a href="https://discord.gg/Sub3WJE">https://discord.gg/Sub3WJE</a></p>
-<h1>GameKick General Rules</h1>
+  <p> Join our Discord here - <a href="https://discord.gg/xZ6PATV">https://discord.gg/xZ6PATV</a></p>
+<h1>NewAge General Rules</h1>
 <h2>General Rules</h2>
   <p>[G1] If there is an issue regarding a rule, highest admin's discretion is enforced</p>
   <p>[G2] Please attempt to solve any disputes between two parties politely before contacting admins</p>
