--- a/slimjbrules.html
+++ b/slimjbrules.html
@@ -15,33 +15,26 @@
   <p>[G5] No talking over the Warden</p>
   <p>[G6] No ghosting</p>
   <p>[G7] No hacking, scripting, exploits, et cetera</p>
-  <p>[G8] When warden dies, all previous orders no longer stand</p>
-  <p>[G9] Pardons are at the warden's discretion</p>
+  <p>[G8] No LR interferrence
+  <p>[G9] When warden dies, all previous orders no longer stand</p>
 <h2 class="ctrules">Counter-Terrorist Rules</h2>
   <p>[CT1] If a player has a mic on CT, he or she takes priority over a non-mic player as warden</p>
   <p>[CT2] No favoritism</p>
   <p>[CT3] No teamkilling</p>
   <p>[CT4] CTs should not be near Ts without good reason</p>
-  <p>[CT6] CTs cannot break vents or use secrets</p>
+  <p>[CT6] CTs cannot break vents or use secrets except to persue rebelling Ts</p>
   <p>[CT7] CTs cannot camp in or around secrets and armory</p>
-  <p>[CT8] CTs cannot pick up or move secret weapons from their original position</p>
   <p>[CT9] CTs cannot freekill or freeshoot Ts</p>
   <p>[CT10] CTs cannot gunplant Ts</p>
-  <p>[CT11] CTs cannot give crouchwalk orders</p>
-  <p>[CT12] CTs cannot give in-cell orders</p>
-  <p>[CT13] Non-warden CT's must give a verbal warning by name to CTs not following warden’s orders</p>
-  <p>[CT14] Warden must give Ts a repeat if asked</p>
-  <p>[CT15] Wardays must allow at least one minute between cells opening and expanding</p>
-  <p>[CT16] There must be an attempt to have at least one normal day in between non-standard days such as wardays, freedays, or special days</p>
+  <p>[CT11] CTs cannot give crouchwalk, afk freeze, or in-cell orders</p>
+  <p>[CT12] CT's must give a warning to Ts unless actively rebelling</p>
+  <p>[CT13] Warden must give Ts a repeat if asked within a reasonable time frame</p>
+  <p>[CT14] Wardays must allow at least one minute between cells opening and expanding</p>
 <h2 class="trules">Terrorist Rules</h2>
-  <p>[T1] 'No detours or delays' is implied with every order</p>
-  <p>[T2] Ts cannot !lr on wardays</p>
-  <p>[T3] Ts must ask for repeats in a reasonable amount of time</p>
-  <p>[T4] Ts may damage or kill CTs if they are baiting. Baiting is considered being within knifing distance of a T that is following orders</p>
-  <p>[T5] Ts cannot camp secrets past 2:30, which includes armory, but can use a secret to move to a new destination</p>
-  <p>[T6] Pointing primary or secondary guns at CTs is KOS</p>
-  <p>[T7] Any damage to CTs is considered KOS</p>
-  <p>[T8] Damaging vents or using secrets is KOS</p>
+  <p>[T1] Ts may damage or kill CTs if they are unreasonably close</p>
+  <p>[T2] Pointing primary or secondary guns at CTs is KOS</p>
+  <p>[T3] Any damage to non-baiting CTs is considered KOS</p>
+  <p>[T4] Damaging vents or using secrets is KOS</p>
 
 
 </body></html>
