--- a/slimjbrules.html
+++ b/slimjbrules.html
@@ -9,7 +9,7 @@
 <h1>NewAge Jailbreak Rules</h1>
 <h2>General Rules</h2>
   <p>[G1] Please attempt to solve any disputes between two parties politely before contacting admins</p>
-  <p>[G2] If there is an issue regarding a rule, highest admin's descision is enforced and final</p>
+  <p>[G2] If admins must get involved, highest admin's descision is enforced and final</p>
   <p>[G3] No harassment</p>
   <p>[G4] No radio spam</p>
   <p>[G5] No talking over the warden</p>
