--- a/slimjbrules.html
+++ b/slimjbrules.html
@@ -31,7 +31,7 @@
   <p>[CT13] Warden must give Ts a repeat if asked within a reasonable time frame</p>
   <p>[CT14] Wardays must allow at least one minute between cells opening and expanding</p>
 <h2 class="trules">Terrorist Rules</h2>
-  <p>[T1] Ts may damage or kill CTs if they are unreasonably close</p>
+  <p>[T1] Ts may damage or kill CTs if they are unreasonably close without becoming a rebel</p>
   <p>[T2] Pointing primary or secondary guns at CTs is KOS</p>
   <p>[T3] Any damage to non-baiting CTs is considered KOS</p>
   <p>[T4] Damaging vents or using secrets is KOS</p>
