--- a/slimjbrules.html
+++ b/slimjbrules.html
@@ -21,7 +21,7 @@
   <p>[CT1] If a player has a mic on CT, he or she takes priority over a non-mic player as warden</p>
   <p>[CT2] No favoritism</p>
   <p>[CT3] No teamkilling</p>
-  <p>[CT4] CTs should not be near Ts without good reason</p>
+  <p>[CT4] CTs should not be near Ts without good reason. Ts that damage or kill CTs breaking this rule will not be rebels</p>
   <p>[CT6] CTs cannot break vents or use secrets except to persue rebelling Ts</p>
   <p>[CT7] CTs cannot camp in or around secrets and armory</p>
   <p>[CT9] CTs cannot freekill or freeshoot Ts</p>
