--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <p> Join our Discord here - <a href="https://discord.gg/xZ6PATV">https://discord.gg/xZ6PATV</a></p>
 <h1>NewAge General Rules</h1>
-  <p><a href="https://www.gamekick.net/generalrules">View our general rules here</a></p>
+  <p><a href="https://www.newagegaming.net/generalrules">View our general rules here</a></p>
 <h1>NewAge JB Rules</h1>
-  <p><a href="https://www.gamekick.net/jbrules">View our JB specific rules here</a>
+  <p><a href="https://www.newagegaming.net/jbrules">View our JB specific rules here</a>
 
 </body></html>
