--- a/jbrules.html
+++ b/jbrules.html
@@ -27,7 +27,7 @@
   <p>[CT9] CTs cannot freekill or freeshoot Ts</p>
   <p>[CT10] CTs cannot gunplant Ts</p>
   <p>[CT11] CTs cannot give crouchwalk, afk freeze, or in-cell orders</p>
-  <p>[CT12] CT's must give a warning to Ts unless actively rebelling</p>
+  <p>[CT12] CTs must give a warning to Ts unless actively rebelling</p>
   <p>[CT13] Warden must give Ts a repeat if asked within a reasonable time frame</p>
   <p>[CT14] Wardays must allow at least one minute between cells opening and expanding</p>
 <h2 class="trules">Terrorist Rules</h2>
