--- a/jbrules.html
+++ b/jbrules.html
@@ -17,7 +17,7 @@
   <p>[G7] No hacking, scripting, exploits, et cetera</p>
   <p>[G8] No LR interferrence
   <p>[G9] When warden dies, all previous orders no longer stand</p>
-  >p>[G10] Once cells open for they round they must remain open</p>
+  <p>[G10] Once cells open for they round they must remain open</p>
 <h2 class="ctrules">Counter-Terrorist Rules</h2>
   <p>[CT1] If a player has a mic on CT, he or she takes priority over a non-mic player as warden</p>
   <p>[CT2] No favoritism</p>
