--- a/jbrules.html
+++ b/jbrules.html
@@ -18,6 +18,7 @@
   <p>[G8] No LR interferrence
   <p>[G9] When warden dies, all previous orders no longer stand</p>
   <p>[G10] Once cells open for they round they must remain open</p>
+  <p>[G11] Reaction games are refusable</p>
 <h2 class="ctrules">Counter-Terrorist Rules</h2>
   <p>[CT1] If a player has a mic on CT, he or she takes priority over a non-mic player as warden</p>
   <p>[CT2] No favoritism</p>
