--- a/generalrules.html
+++ b/generalrules.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>NewAge Jailbreak</title>
+  <title>Flamepunch</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 
   <p> Join our Discord here - <a href="https://discord.gg/xZ6PATV">https://discord.gg/xZ6PATV</a></p>
-<h1>NewAge General Rules</h1>
+<h1>Flamepunch General Rules</h1>
 <h2>General Rules</h2>
   <p>[G1] Please attempt to solve any disputes between two parties politely before contacting admins</p>
   <p>[G2] If there is an issue regarding a rule, highest admin's discretion is enforced</p>
