--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>NewAge Jailbreak</title>
+  <title>Flamepunch</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 
   <p> Join our Discord here - <a href="https://discord.gg/xZ6PATV">https://discord.gg/xZ6PATV</a></p>
-<h1>NewAge General Rules</h1>
+<h1>Flamepunch General Rules</h1>
   <p><a href="https://www.newagegaming.net/generalrules">View our general rules here</a></p>
-<h1>NewAge JB Rules</h1>
+<h1>Flamepunch JB Rules</h1>
   <p><a href="https://www.newagegaming.net/jbrules">View our JB specific rules here</a>
 
 </body></html>
